--- a/templates/modifier_admin.html
+++ b/templates/modifier_admin.html
@@ -170,10 +170,8 @@
                         <td><label for="statu">Statut :</label></td>
                         <td>
                             <select name="statu" id="statu">
-                                <select name="statu" id="statu">
                                 <option value="Perdu" {% if objetadmin[2] =='Perdu' %}selected{% endif %}>Perdu</option>
                                 <option value="Trouvé" {% if objetadmin[8] =='Trouvé' %}selected{% endif %}>Trouvé</option>
-                            </select>
                             </select>
                         </td>
                     </tr>
@@ -181,19 +179,23 @@
                         <td>Photo actuelle :</td>
                         <td>
                             {% if objetadmin[7] %}
-                            <img src="{{ url_for('static', filename=objetadmin[7].replace('static/', '')) }}" alt="Image de {{ objetadmin[1] }}" class="img-fluid" style="max-width: 100%; max-height: 200px;"><br>
-                            <img src="{{ url_for('static', filename=objetadmin[9].replace('static/', '')) }}" alt="Image de {{ objetadmin[1] }}" class="img-fluid" style="max-width: 100%; max-height: 200px;"><br>
-                            <img src="{{ url_for('static', filename=objetadmin[10].replace('static/', '')) }}" alt="Image de {{ objetadmin[1] }}" class="img-fluid" style="max-width: 100%; max-height: 200px;"><br>
-                            {% else %}
-                            <p>Aucune image disponible</p>
+                            <img src="{{ url_for('static', filename=objetadmin[7].replace('static/', '')) }}" alt="Image de {{ objetadmin[1] }}" class="img-fluid" style="max-width: 50%; max-height: 200px;">
+                            {% endif %}
+                            {% if objetadmin[9] %}
+                            <img src="{{ url_for('static', filename=objetadmin[9].replace('static/', '')) }}" alt="Image de {{ objetadmin[1] }}" class="img-fluid" style="max-width: 100%; max-height: 200px;">
+                            {% endif %}
+                            {% if objetadmin[10] %}
+                            <img src="{{ url_for('static', filename=objetadmin[10].replace('static/', '')) }}" alt="Image de {{ objetadmin[1] }}" class="img-fluid" style="max-width: 100%; max-height: 200px;">
                             {% endif %}
                         </td>
                     </tr>
                     <tr>
                         <td><label for="photo">Changer l'image :</label></td>
-                        <td><input type="file" id="photo" name="file1" accept="image/*"><br>
-                        <input type="file" id="photo" name="file2" accept="image/*"><br>
-                        <input type="file" id="photo" name="file3" accept="image/*"><br></td>
+                        <td>
+                            <input type="file" id="photo" name="file1" accept="image/*">
+                            <input type="file" id="photo" name="file2" accept="image/*">
+                            <input type="file" id="photo" name="file3" accept="image/*">
+                        </td>
                     </tr>
                     <tr>
                         <td colspan="2" style="text-align: center;">
