--- a/templates/charts.html
+++ b/templates/charts.html
@@ -165,7 +165,7 @@
             <!-- Header with Hamburger Menu -->
             <div class="header">
                 <a href="{{ url_for('Indexadmin') }}" class="menu-btn" id="menu-btn"><i class="fas fa-arrow-left"></i></a>
-                <h1>Liste des objets</h1>
+                <h1>Statistique</h1>
             </div>
 
             <!-- Content Wrapper -->
