--- a/templates/Profile.html
+++ b/templates/Profile.html
@@ -130,6 +130,7 @@
             <li><a href="{{ url_for('Index') }}"><i class="fas fa-home"></i> Page général</a></li>
             <li><a href="{{ url_for('Indexutile') }}"><i class="fas fa-briefcase"></i> Mes objets</a></li>
             <li><a href="/updateprofil/{{ person.0 }}"><i class="fas fa-cog"></i> Modifier le profil</a></li>
+            <li><a href="/change-password/{{ person.0 }}"><i class="fas fa-key"></i>Modifier le mot de passe</a></li>
         </ul>
     </div>
 
